调整了架构

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <title>Steering Behaviors</title>
     <script src="vector2d.js"></script>
-    <script src="tool.js"></script>
+    <script src="ShowObj.js"></script>
     <script src="jGE.config.js"></script>
-    <script src="jGE.js"></script>
+    <script src="tool.js"></script>
     <script src="MObj.js"></script>
+    <script src="jGE.js"></script>
 </head>
 <body>
 <div id="view_port"></div>
