--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Steering Behaviors</title>
-    <script src="vector2d.js"></script>
-    <script src="ShowObj.js"></script>
-    <script src="jGE.config.js"></script>
-    <script src="tool.js"></script>
-    <script src="MObj.js"></script>
-    <script src="jGE.js"></script>
+    <script src="lib/vector2d.js"></script>
+    <script src="lib/ShowObj.js"></script>
+    <script src="lib/jGE.config.js"></script>
+    <script src="lib/tool.js"></script>
+    <script src="lib/MObj.js"></script>
+    <script src="lib/jGE.js"></script>
 </head>
 <body>
 <div id="view_port"></div>
