事件处理器

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Steering Behaviors</title>
     <script src="lib/vector2d.js"></script>
     <script src="lib/ShowObj.js"></script>
+    <script src="lib/EventManager.js"></script>
     <script src="lib/ObjectFactory.js"></script>
     <script src="lib/ResManager.js"></script>
     <script src="lib/jGE.config.js"></script>
