* 新增pu pd指令 * 梳理国际化部分

--- a/WebLogo/index.html
+++ b/WebLogo/index.html
@@ -31,6 +31,7 @@
     <input type="text" id="cmd_input" disabled="disabled"/>
 </div>
 
+<script src="../WebLogo/i18n/en.js"></script>
 <script src="../WebLogo/i18n/zh-cn.js"></script>
 <script src="../WebLogo/weblogo.js"></script>
 
