--- a/WebLogo/index.html
+++ b/WebLogo/index.html
@@ -39,8 +39,8 @@
         </div>
     </div>
 </div>
-<script src="../WebLogo/logopolyfill.js"></script>
-<script src="../WebLogo/weblogo.js"></script>
+<script src="logopolyfill.js"></script>
+<script src="weblogo.js"></script>
 
 </body>
 </html>
