--- a/WebTurtle/index.html
+++ b/WebTurtle/index.html
@@ -35,7 +35,7 @@
     <div id="cmd">
         <div id="cmd_log"></div>
         <div id="cmd_in">
-            <input type="text" id="cmd_input" disabled="disabled"/>
+            <input type="text" id="cmd_input" disabled="disabled" placeholder="请在这输入Logo指令，并按回车执行。"/>
         </div>
     </div>
 </div>
