--- a/jGE_ES5.html
+++ b/jGE_ES5.html
@@ -15,8 +15,8 @@
 ES6实时转码ES5中，约需要3～5s，请稍候。
 
 </div>
-    <script src="//cdn.bootcss.com/babel-polyfill/6.23.0/polyfill.min.js"></script>
-    <script src="//cdn.bootcss.com/babel-standalone/6.23.1/babel.min.js"></script>
+    <script src="//cdn.bootcss.com/babel-polyfill/7.0.0-alpha.9/polyfill.min.js"></script>
+    <script src="//cdn.bootcss.com/babel-standalone/6.24.0/babel.min.js"></script>
     <script type="text/babel" src="lib/vector2d.js"></script>
     <script type="text/babel" src="lib/ShowObj.js"></script>
     <script type="text/babel" src="lib/jGE.js"></script>
