--- a/PBox/index.html
+++ b/PBox/index.html
@@ -11,6 +11,7 @@
     <script src="../lib/ResManager.js"></script>
     <script src="../lib/SceneManager.js"></script>
     <script src="../lib/jGE.config.js"></script>
+    <script src="../lib/Keyboard.js"></script>
     <script src="../lib/tool.js"></script>
     <script src="../lib/MObj.js"></script>
     <style>
