--- a/PBox/index.html
+++ b/PBox/index.html
@@ -3,17 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Push Box</title>
-    <script src="../lib/vector2d.js"></script>
-    <script src="../lib/ShowObj.js"></script>
-    <script src="../lib/jGE.js"></script>
-    <script src="../lib/EventManager.js"></script>
-    <script src="../lib/ObjectFactory.js"></script>
-    <script src="../lib/ResManager.js"></script>
-    <script src="../lib/SceneManager.js"></script>
-    <script src="../lib/jGE.config.js"></script>
-    <script src="../lib/Keyboard.js"></script>
-    <script src="../lib/tool.js"></script>
-    <script src="../lib/MObj.js"></script>
+    <script src="../release/jGE.min.js"></script>
+    
     <style>
         * {padding: 0px 0px;margin:0px 0px;border:0px;box-sizing: border-box;}
         body{overflow: hidden;}
