--- a/Test/index.html
+++ b/Test/index.html
@@ -13,7 +13,7 @@
     <script src="../lib/SceneManager.js"></script>
     <script src="../lib/jGE.config.js"></script>
     <script src="../lib/tool.js"></script>
-    <script src="../lib/MObj.js"></script>
+    <script src="../lib/jGE.Debug.js"></script>
     <style>
         * {
             padding: 0px;
