--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Steering Behaviors</title>
+    <title>jGE - Demo</title>
     <script src="release/jGE.min.js"></script>
     <script src="Test/UnitTest.js"></script>
     <style>
