加入不可用提示

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 <body>
 <div id="view_port"></div>
 
+<script src="lib/Availability.js"></script>
+
 <script>
     (function(){
         if(typeof Symbol == typeof undefined) window.location.href = "jGE_ES5.html";
