加入简易部署指引

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 <div id="view_port"></div>
 
-<script src="lib/Availability.js"></script>
+<script src="src/Availability.js"></script>
 
 <script>
     (function(){
