加入进度管理

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>jGE - Demo</title>
-    <script src="release/jGE.min.js"></script>
+    <script src="release/jGE.js"></script>
     <script src="Test/UnitTest.js"></script>
     <style>
         * {padding: 0px;margin: 0px;}
@@ -23,8 +23,9 @@
         ,height:document.documentElement.clientHeight});
         document.getElementById("view_port").appendChild(x.GetDom());
         window.t  = x;
-
         UT.Auto_Test(x);
+
+        //UT.Test_Ajax();
         
     })();
 </script>
