资源加载加入完成事件通知

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>jGE - Demo</title>
     <script src="release/jGE.js"></script>
-    <script src="Test/UnitTest.js"></script>
+    <script src="Test/UnitRes.js"></script>
     <style>
         * {padding: 0px;margin: 0px;}
         body{overflow: hidden;}
@@ -23,9 +23,8 @@
         ,height:document.documentElement.clientHeight});
         document.getElementById("view_port").appendChild(x.GetDom());
         window.t  = x;
-        UT.Auto_Test(x);
+        UR.Auto_Test(x);
 
-        //UT.Test_Ajax();
         
     })();
 </script>
